# controllers/userController.go
@@ -2,6 +2,8 @@ package controllers
 
 import (
 	"database/sql"
+	"os"
+	"strconv"
 
 	"github.com/Cyb2rgK1ndr3dSnap/api-tracking/models"
 	"github.com/Cyb2rgK1ndr3dSnap/api-tracking/security"
@@ -29,8 +31,8 @@ func RegisterUser(c *gin.Context) {
 		return
 	}
 
-	u, err := services.GetUserByUsername(registerUser.Email, db)
-	if err != nil {
+	u, err := services.GetUserByUsername(registerUser.UserName, db)
+	if err != nil && err != sql.ErrNoRows {
 		c.JSON(400, gin.H{"error": "Error with server"})
 		return
 	}
@@ -53,37 +55,11 @@ func RegisterUser(c *gin.Context) {
 
 	registerUser.Role = 2
 
-	/*tx, err := db.Begin()
-	if err != nil {
-		c.JSON(400, gin.H{"message": "Error with server"})
-		return
-	}*/
-
 	err = services.RegisterUser(registerUser, hashedPassword, db)
 	if err != nil {
 		c.JSON(400, gin.H{"error": "Error with the register of user"})
 		return
 	}
-	/*
-			errChan, err := utils.ExecuteSend(id)
-			if err != nil {
-				tx.Rollback()
-				c.JSON(400, gin.H{"error": "Error with the register of user " + err.Error()})
-				return
-			}
-			// Esperar a que la goroutine envíe el error a través del canal
-			if err := <-errChan; err != nil {
-				tx.Rollback()
-				c.JSON(400, gin.H{"error": "Error with the register of user " + err.Error()})
-				return
-			}
-
-		err = tx.Commit()
-		if err != nil {
-			tx.Rollback()
-			c.JSON(400, gin.H{"error": "Error with the register of user"})
-			return
-		}*/
 
 	c.JSON(200, gin.H{"message": "Registered user"})
 }
@@ -120,21 +96,60 @@ func LoginUser(c *gin.Context) {
 		return
 	}
 
-	token, err := security.CreateJWT(*u)
+	expirationSeconds, err := strconv.Atoi(os.Getenv("JWT_EXPIRATION_IN_SECONDS"))
+	if err != nil {
+		expirationSeconds = 3600 // 1 hora por defecto
+	}
+
+	token, err := security.CreateJWT(*u, loginUser.Token, expirationSeconds)
 	if err != nil {
 		c.JSON(400, gin.H{"error": "Interal error"})
 		return
 	}
 
-	RegisterToken := models.RegisterToken{
-		IDUser: u.IDUser,
-		Token:  loginUser.Token,
-	}
+	c.SetCookie("jwt_token", token, expirationSeconds, "/", "", false, true)
 
-	services.RegisterDevice(RegisterToken, db)
+	if loginUser.Token != "" {
+		RegisterToken := models.RegisterToken{
+			IDUser: u.IDUser,
+			Token:  loginUser.Token,
+		}
+
+		services.RegisterDevice(RegisterToken, db)
+	}
 
 	u.Password = ""
 	u.Token = token
 
 	c.JSON(200, u)
+}
+
+func LogoutUser(c *gin.Context) {
+	db := c.MustGet("db").(*sql.DB)
+
+	token, _ := c.Get("tokenDevice")
+
+	services.DeleteDevice(token, db)
+}
+
+func GetUsersTotal(c *gin.Context) {
+	db := c.MustGet("db").(*sql.DB)
+
+	var Body models.ReadUser
+
+	err := c.ShouldBindJSON(&Body)
+	if err != nil {
+		c.JSON(400, gin.H{"error": "Please fill all the required data"})
+		return
+	}
+
+	Body.IDRole = c.MustGet("roleID").(int)
+
+	total, err := services.GetUserTotal(db, Body)
+	if err != nil {
+		c.JSON(400, gin.H{"error": "Error with server" + err.Error()})
+		return
+	}
+
+	c.JSON(200, gin.H{"total": total})
 }
